apps/production/traefik-internal/ingressroute-traefik-internal.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.internal.local`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: internal-tls
